fix bug for Collapse All Layers in LayerList widget; Fix popup title format problem

--- a/jimu.js/css/popup.css
+++ b/jimu.js/css/popup.css
@@ -6,6 +6,9 @@
   text-align: right;
 }
 
+.esriPopup .titlePane .title{
+  width: 200px;
+}
 .esriPopup .esriPopupWrapper {
   font-family: "Avenir Light";
 }
